# PaperCutSoftware

./: LICENSE  README.md
API/: README.md
api/papercut_xml_webservices_api/: AUTHORS.md  CONTRIBUTING.md  HISTORY.md  LICENSE  MANIFEST.in  Makefile  README.md  __init__.py  papercut_xml_webservices_api.py  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
api/papercut_xml_webservices_api/ServerCommand/: __init__.py
api/papercut_xml_webservices_api/docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
api/papercut_xml_webservices_api/papercut_xml_webservices_api/ServerCommand/: Const.py  Exceptions.py  ServerComandProxy.py
mobilityPrint/: mobility.md  mobility.ps1
