[bumpversion]
current_version = 0.2.6

[bump2version]
current_version = 0.2.5
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)
serialize = {major}.{minor}.{patch}
commit = True
tag = True

[bump2version:file:pyproject.toml]
search = [tool.poetry.version={current_version}, project.version={current_version}]
replace = [tool.poetry.version={new_version}, project.version={new_version}]

[bump2version:file:papercut_xml_webservices_api/__init__.py]
search = __version__ = {current_version}
replace = __version__ = {new_version}

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[pytest]
norecursedirs = tests/helpers

[options]
zip_safe = True
include_package_data = True
